// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/blocksEditor/blocks/text > should match Display snapshot 1`] = `
<div>
  <div
    class="octo-editor-preview"
  >
    <p>
      test-value
    </p>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/text > should match Input snapshot 1`] = `
<div>
  <div
    class="TextContent"
    data-testid="text"
  >
    <div
      class="MarkdownEditor octo-editor  active"
    />
  </div>
</div>
`;
